fix: Added CORS protection

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://ytazi06:<db_password>@mosques.rt1n7vo.mongodb.net/?retryWrites=true&w=majority&appName=mosques
+MONGODB_URI=mongodb+srv://ytazi06:123VIVALALGERIE@mosques.rt1n7vo.mongodb.net/?retryWrites=true&w=majority&appName=mosques
